--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  background:
+    -webkit-linear-gradient(rgba(135, 60, 255, 1), rgba(135, 60, 255, 0.0) 0%),
+    -webkit-linear-gradient(-70deg, rgba(120, 155, 255, 0.9) 45%, rgba(55, 230, 235, 1) 0%);
+    height: 100vh;
 }
 
 .App-logo {
@@ -18,4 +22,10 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
