--- a/src/styles/weather-results.css
+++ b/src/styles/weather-results.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa');
 
+
 .main-content h1{
   padding: 20px;
   /* background-color: red; */
@@ -38,11 +39,18 @@
 
 .main-content .footer{
 	display: flex;
+
 	justify-content: space-between;
 	align-items: center;
   /* background-color: pink; */
-  font-family: 'Comfortaa';
   color: black;
+  Opacity : 0.8;
+  padding-top: 20px;
+
+}
+.main-content .footer p{
+  font-family: 'Comfortaa';
+
 }
 
 .main-content .footer i {
@@ -51,11 +59,10 @@
   /* background-color: purple; */
   align-items: center;
   color: black;
+
 }
 
  .searchzip{
-  
-
 
  }
 
@@ -65,6 +72,6 @@ h1.homeText{
 }
 
 h1.homeText i{
-  padding: 80px;
-  font-size: 120px;
+  padding: 40px;
+  font-size: 160px;
 }
