--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,10 @@
-.App {
+/*.App {
   text-align: center;
   background:
     -webkit-linear-gradient(rgba(135, 60, 255, 1), rgba(135, 60, 255, 0.0) 0%),
     -webkit-linear-gradient(-70deg, rgba(120, 155, 255, 0.9) 45%, rgba(55, 230, 235, 1) 0%);
     height: 100vh;
-}
+}*/
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
