--- a/src/styles/weather-results.css
+++ b/src/styles/weather-results.css
@@ -1,43 +1,120 @@
 /*@import url('https://fonts.googleapis.com/css?family=Comfortaa');*/
 /* <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 
+h1,h2,h3,p {
+  font-family: 'Open Sans Condensed', sans-serif;
+}
 
+h1 {
+  font-size: 55px;
+}
+
+.white {
+  color: white;
+}
 
 .weather-container {
   width: 100vw;
-  background: pink;
-  /*height: 100vh;*/
+  min-height: 100vh;
+  background: #4571DA;
+  padding: 20px;
+  font-size: 40px;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+}
+
+.weather-container > div {
+  flex: 1;
 }
 
 .weather-container .date-time {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: red;
+  /*background: red;*/
 }
 
 .weather-container .icon-prev-next {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  background: blue;
+  /*background: blue;*/
+  position: relative;
 }
 
-.weather-container .icon-prev-next i {
-  font-size: 80px;
+.weather-container .icon-prev-next button {
+  height: 100%;
+  width: 100%;
+}
+
+.weather-container .icon-prev-next .prev-button {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  left: 0;
+  /*background: teal;*/
+  /*opacity: 0.5;*/
+}
+
+/*.weather-container .icon-prev-next .prev-button i.arrow-left {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-left: 7px solid black;
+  border-top: 7px solid black;
+  transform: rotate(-45deg);
+}*/
+
+.weather-container .icon-prev-next .next-button {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  right: 0;
+  /*background: brown;*/
+  /*opacity: 0.5;*/
+}
+
+/*.weather-container .icon-prev-next .next-button i.arrow-right {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-right: 7px solid black;
+  border-top: 7px solid black;
+  transform: rotate(45deg);
+}*/
+
+
+
+.weather-container .icon-prev-next .icon-dot-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.weather-container .icon-prev-next .icon-dot-container i {
+  font-size: 200px;
+  padding: 30px;
 }
 
 .weather-container .temp-status {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: green;
+  /*background: green;*/
+}
+
+.weather-container .temp-status .temp {
+  font-size: 50px;
 }
 
 .weather-container .city {
   display: flex;
   flex-direction: column;
-  background-color: purple;
+  /*background-color: purple;*/
 }
 
 .weather-container .city .top-border {
@@ -52,7 +129,7 @@ ul.dot {
   display: flex;
   justify-content: center;
 	align-items: center;
-  background: blue;
+  /*background: blue;*/
 }
 
 
