--- a/src/styles/weather-results.css
+++ b/src/styles/weather-results.css
@@ -53,6 +53,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
 }
 
 .loading-container .loading-icon {
