--- a/src/styles/weather-results.css
+++ b/src/styles/weather-results.css
@@ -409,6 +409,35 @@ form input {
   color: #000;
 }
 
+.modal {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.8);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal .content {
+  width: 90%;
+  padding: 20px;
+  background: #eee;
+  text-align: center;
+}
+
+.modal .close {
+  color: #fff;
+  padding: 20px 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+
+
 @media only screen and (min-width: 500px) {
   .main > div {
     margin: 0 auto;
@@ -426,6 +455,13 @@ form input {
 
   p {
     font-size: 45px;
+  }
+
+  .modal .content {
+    width: 500px;
+    padding: 20px;
+    background: #eee;
+    text-align: center;
   }
 
 }
